<resources>
    <string name="app_name">נומרולוגיה</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_user_Info">פרטי משתמש</string>
    <string name="menu_Current">שנה חודש ויום אישי</string>
    <string name="menu_haed">מוקד הראש</string>
    <string name="menu_hart">מוקד הלב</string>
    <string name="menu_spirala">מוקד הספירלה</string>
    <string name="menu_hands">מוקד הידיים</string>
    <string name="menu_yaldot">מוקד הילדות</string>
    <string name="menu_feet">מוקד הרגליים</string>
    <string name="menu_bagrot">מוקד הבגרות</string>
    <string name="world">World!</string>
    <string name="Intent0">Click to Previous Intent</string>
    <string name="close">סגור</string>
    <string name="UserInformation">פרטי משתמש</string>
    <string name="spialaInformation">נפש האדם</string>
    <string name="spialaInformation_num1">הייעוד שלך הוא להיות מנהיג\nאתה צריך לעשות בניהול</string>
    <string name="m_hands">מוקד הידיים</string>
    <string name="m_hands_num1">מספר 1 במוקד הידיים - מיוחס למזל אריה, לשמש וליסוד האש \n באופן פוטנציאלי מספר 1 במוקד הידיים והמזל המיוחס לו, מתאר אדם בעל יכולת הנהגה, עצמאות וסמכותיות. הוא מסוגל לבצע כל פעולה באופן אסטרטגי וממוקד מסרה. הוא יכול ליזום פרויקטים גדולים ולממשם. הוא יכול ללמוד באופן עצמאי ולהמציא את עצמו כל פעם מחדש, עש״תו משקפת תושייה, יוזמה, אחריות ולויאליות. במצבים של חולשה, רגישות או מחלה הוא יכול להסכים לקבל עזרה רק מבעלי מקצוע מוסמכים או שיאמין ביכולתו לספל בעצמו. \n מבחינה מקצועית \n מ׳ שבמוקד הידיים שלו נמצא מספר 1 יכול להצליח בתפקיד ניהולי מרכזי וכן בתפקידי יזמות עסקית, בשיווק ומכירות, ביחסי ציבור ובפרסום, באמרגנות, באמנויות הבמה ובהוראה. במילים אחרות הוא יכול להצליח ולהגשים את כישוריו בכל תפקיד, ובפרס שיהיה עצמאי ואדון לעצמו. \n משמעות מספר 1 במצבים של חולשה, רגישות ומחלה \n אם האדם הזה יחלה, הוא יגלה אחריות רבה ויפנה למיטב הגורמים לטיפול מידי. הוא אינו מזניח את עצמו ובדרך כלל הוא נהנה מבריאות טובה. מוקדי התורפה בגוף הם: הלב, הגב ועמוד השדרה. \n  </string>
    <string name="m_hands_num2">מספר 2 במוקד הידיים ־ מיוחס למזל סרטן, לכוכב ירח וליסוד המים \n באופן פוטנציאלי מספר 2 במוקד הידיים והמזל המיוחם לו, מתאר אדם התומך בזולת ומעורב בקהילה, זה שעובד עם הקבוצה למען מטרה משותפת. אדם הקשור בעיקר לביתו ולמשפחתו ומ0וגל לשתף פעולה, להעניק אהבה וחום, להזין וליצור שלום ואחדות. ייתכן גם שהוא אספן בלתי נלאה לחפצים ולכסף.מבחינה מקצועית \n מספר 2 במוקד הידיים מייצג אדם שמסוגל להיות איש עסקים מצליח זהיר ונבון. ייתכן גם שיבחר לעבוד במקום עבודה קטן וצנוע, כמו כיתת מחקר או בתחום המחשבים. הוא ניחן בכישרונות אמנותיים, לכן יוכל לעצב חלונות ראווה, או להיות אדריכל. הוא יכול גם להיות ספרן, עורך לשוני, מנהל משאבי אנוש, מלונאי, סוחר עתיקות, אוצר במוזיאון או היסטוריון, כלומר ישמח לשמש בכל תפקיד המוקיר את אוצרות העבר. בשל אהבתו לזולת יתאימו לו גם מקצועות הקשורים בסיוע ובעזרה לזולת ובהם חינוך, פסיכולוגיה, ייעוץ,גישור,רפואה, טיפול בתינוקות, עבודה סוציאלית, הסעדה. \n משמעות מספר 2 במצבים של חולשה, רגישות ומחלה \n במצבי חולשה האדם יכול לגלות אחריות רבה ולפנות למיטב הגורמים לטיפול מידי, אינו יזניח את עצמו עד להחלמתו המלאה. בתהליך הריפוי יגלה נטייה להתבודדות ולהתכנסות עצמית עד שיבריא לגמרי. \n מוקד׳ התורפה בגוף הם: הנפש, מערכת העצבים, העורף, החזה, הרחם ומערכת העיכול.</string>
    <string name="m_hands_num3">מספר 3 במוקד הידיים - מיוחס למזל קשת, לכוכב צדק וליסוד האש \n באופן פוטנציאלי מספר 3 במוקד הידיים והמזל המיוחם לו, מתאר אדם שיתקשה בקשרים שינסו להגביל את חופש הפעולה האישי שלו. הוא מוכשר מאוד וניחן במגוון יכולות להשיג את מטרותיו בדרכים ישירות, הוא יקיף את עצמו באנשים שיעריצו את פועלו, את התלהבותו הרבה ואת היכולת להגשים את שלל רעיונותיו היצירתיים. האויב הגדול ביותר שלו הוא השעמום, לכן הוא חייב לעסוק בעשייה מתמדת ומגוונת, בעיקר עם אנשים ולמענם. הוא יכבוש ויסחף רבים אחריו ויפיץ סביבו שמחה וחדוות יצירה. \n מבחינה מקצועית \n מספר 3 במוקד הידיים מייצג אדם שמסוגל להיות שחקן ואיש במה בזכות כישוריו התאטרליים. כמו כן הוא יכול לבחור במקצועות בהם יוכל להגשים את היכולת היצירתית ואת כושר ההמצאה שלו, כגון: מרצה, סופר, מוציא לאור, מעצב גרפי, איש תקשורת ומדיה, פרסומאי,רקדן, שחקן, סטנדאפיסט, דוגמן, מאמן אישי, יועץ השקעות, ספורטאי (בעיקר ספורט אתגרי) או וטרינר. \n משמעות מספר 3 במצבים של חולשה, רגישות ומחלה \n כשהאדם הזה נופל למשכב, יהיה זקוק נואשות לטיפול מפנק ומסור של מקורביו, הוא חסר כל יכולת לטפל בעצמו. תשומת לב נכונה ורבה תביא להחלמתו. מוקדי התורפה בגוף, נמצאים בברכיים, בחוליות התחתונות של עמוד השדרה, רגישות באגן הירכיים, במותניים ובכבד. כמו כן הוא עלול לסבול מפציעות ספורט שונות בחלק מהאיברים האלה.</string>
    <string name="m_hands_num4">מספר 4 במוקד הידיים-מיוחס למזל בתולה, לכוכב מרקורי וליסוד האדמה \n באופן פוטנציאלי מספר 4 במוקד הידיים והמזל המיוחס לו, מתאר אדם בעל יכולת שיטתית, רצינית ואחראית שאינו יודע פשרות. מצטיין במספר מיומנויות חשובות: מיומנות ארגונית, שיתוף פעולה ועבודת צוות, יכולת התמדה, יכולת עשייה טכנית ומעשית, יכולת דיוק בפרטים, יכולת ליצור כספים ולשמור עליהם דרך השקעה וחיסכון. \n מבחינה מקצועית \n מספר 4 והמזל המיוחס לו, במוקד הידיים מייצג אדם שיתמסר לעבודתו עד לתשישות מוחלטת, אמנם הוא מוכשר מאוד, אך הוא ישיג את מטרותיו לאט ובעמל רב. הוא יתחיל את דרכו המקצועית בתפקידים זוטרים ויפלס את דרכו למשרות רמות מעלה בעיקר בתחומי הניהול, המחשבים, האדריכלות, הרוקחות או האדמיניסטרציה. ״תכן שיבחר במקצועות טכניים כמו: הנדסה, מתמטיקה, טכנולוגיה ואלקטרוניקה. לעתים ״מצא גם בפוליטיקה. \n משמעות מספר 4 במצבים של חולשה, רגישות ומחלה \n כשהאדם הזה חולה יוכל לטפל היטב ובמסירות רבה בעצמו ובאחרים, הוא יודע לשמור על בריאותו שבעיניו היא ערך עליון. הוא פוחד מאוד ממחלות מדבקות (ארון התרופות שלו עמוס לעייפה), הוא מתקשה להתגבר על חוסר איזון והדאגה בשל כך תל וה אותו בחיי היום-יום. \n מוקדי התורפה בגוף, הם הידיים, המעיים, מערכת העצבים, השרירים שעלולים להיתפס ובעיות בפרקים. הוא מועד ללקות באולקוס, בכובד שמיעה ובקוצר ראייה (כבר בגיל צעיר).</string>
    <string name="m_hands_num5">מספר 5 במוקד הידיים - מיוחס למזל תאומים, לכוכב מרקורי וליסוד האוויר \n באופן פוטנציאלי מספר 5 במוקד הידיים והמזל המיוחס לו, מתאר אדם שיבול לגרום לשינויים, יש לו מיומנות וזריזות ידיים, את פרנסתו יוכל למצוא בקלות בזכות סתגלנותו והתמצאותו בתחומים רבים. הוא יכול להיות רב תושייה ולהשיג כסף בדרכים שונות כולל הימורים. הוא יכול להיות אלוף הבזבוז והפזרנות, או לחילופין אלוף הקמצנות והחסכנות אך בכל מקרה יש לו טעם סוב, קסם איש׳ כובש, פתיחות ונכונות לקבל כל חידוש והמצאה. הוא יכול להיות סוחר ממולח המסוגל למכור קרח לאסקימואים. עם זאת, הוא עלול להתקשות בקשרים שיגבילו את חופש הפעולה האישי שלו. הוא ניחן ביכולת נדירה לעשות כמה דברים בו-זמנית, (לגלוש באינטרנט, להקשיב למוזיקה, לדבר עם חבר ובו-בזמן לכתוב מאמר לעיתון), לפעמים הוא נראה כאחוז תזזית. \n מבחינה מקצועית \n מספר 5 במוקד הידיים מייצג אדם מוכשר מאוד בתחומי עבודה וקריירה שיש בהם ריבוי משימות כגון: כישרון לכתיבה, שיווק ומכירות, משחק, דרמה, תקשורת, לימוד ועיסוק בשפות. הוא יכול להיות טלפן, נער משלוחים, נהג, מדריך תיירים, סטייליסט ויועץ אופנה, פוליטיקאי, פרשן לענייני חוץ, כתב  קשורת, סוכן נסיעות, דייל, מרצה, מנחה, נווט, מוכר ספרים ויחצ״ן. \n משמעות מספר 5 במצבים של חולשה, רגישות ומחלה \n האדם הזה יכול לא להתייחס ברצינות לבעיותיו הבריאותיות ואינו נבהל, הוא מתנהג בנינוחות ובגמישות. אוויר צח ושינה טובה ישפרו את הרגשתו. בגלל סקרנותו שאינה יודעת שובע ובגלל המתח הרב בו הוא שרוי לעתים קרובות, ״תכנו קש״ שינה והירדמות. מוקדי התורפה בגוף, ריאותיו רגישות (״תכנו בעיות נשימה, קצרת, ברונכיטיס ואלרגיות מסוגים שונים). כדי לשמור על בריאותו רצוי שיעסוק בפעילות גופנית סדירה, וידאג לשינה סדירה ולתוספי מזון.</string>
    <string name="m_hands_num6">מספר 6 במוקד הידיים - מיוחס למזל מאזניים, לכוכב נוגה וליסוד האוויר \n באופן פוטנציאלי מספר 6 במוקד הידיים והמזל המיוחס לו, מתאר אדם שמצטיין ביכולת ליצור קשרים קרובים עם הזולת, לארח באופן מושלם, להכיל ולשתף פעולה. במעשיו הוא שוחר שלום ולכן יצטיין בניהול משא ומתן ובגישור. הוא מסוגל ליצור אווירה הרמונית ונעימה סביבו ויכול להעדיף את צורכי החברה על אלה שלו. לעתים ידחה דברים או מטלות בחוסר חשק. הוא עשוי שלא לעמוד בהתחייבויות ארוכות טווח ולהשתהות עד אשר ינוח ויתחזק, רק אז יוכל להמשיך ולמלא את חובותיו בהצלחה רבה. \n מבחינה מקצועית \n מספר 6 במוקד הידיים מייצג אדם עם יכולות מגוונות ומרביתן מתחום המשפט והצדק והטיפול באחרים. יתאימו לו מקצועות כמו עורך דין,משפטן, יחסי ציבור, פסיכולוגיה חברתית, עבודה סוציאלית, הוראה, הנחיה, רפואת משפחה וילדים, רפואה אלטרנטיבית, ״עוץ, גישור ואפילו שידוך. בשל האהבה ליופי ולאסתטיקה יוכל לעסוק בקוסמטיקה ולהיות מעצב גרפי, אמן, מעצב אופנה, מעצב פנים, מעצב תפאורה, מעצב חלונות ראווה וסוחר בחפצי אמנות. בנוסף הוא נמשך גם לכל עיסוק תרבותי כמו אמנות וספרות. אהבתו לכסף ולרכוש תתעל אותו למקצועות כמו ת ווך, ייעוץ עסקי וראיית חשבון. \n משמעות מספר 6 במצבים של חולשה, רגישות ומחלה \n כשהאדם הזה חולה הוא יטפל היטב בעצמו. כלפי אחרים יגלה רגישות ומסירות רבה, הוא ישמור על בריאותו באמצעות טיפולים מאזנים ואלטרנטיב״ם, צמחים וויטמינים, עיסוי לאיזון הנפש והגוף. \n מוקדי התורפה בגוף, אוזניים,בלוטת התריס והגרון, איברי המין הנשיים, כליות, מותניים ורגישות מיוחדת לחום ולקור.</string>
    <string name="m_hands_num7">מספר 7 במוקד הידיים - מיוחס למזל דגים, לכוכב נפטון וליסוד המים \n באופן פוטנציאלי מספר 7 במוקד הידיים והמזל המיוחס לו, מתאר אדם המצטיין במספר רב של יכולות, למשל להתמחות בתחומי המדע והרוח, ולחקור כל תחום שונה ונבדל. הוא יגלה מיומנות בריפוי ויהיה מסוגל להגיע לשלמות בכל תחום שייגע בו. יש לו מודעות מוסרית והוא מחפש ללא הרף את האמת המוחלטת. גם כשהוא בקרב חברים ומשפחה הוא עשוי לבדל עצמו מסביבתו, עם זאת הוא עדין ונעים הליכות. ייטיב לבצע מלאכות הדורשות התמסרות מלאה, מרחב מחיה ועצמאות. המשיכה אל המושלם והצורך לבטא שלמות זו מבחינה רגשית, גורמים לו להפיק הנאה מיוחדת ממוזיקה ובמיוחד מההרמוניה של המוזיקה הקלסית. \n מבחינה מקצועית \n מספר 7 במוקד הידיים מייצג אדם מוכשר מאוד, אך הוא ישיג את מטרותיו לאט ובעמל רב. הוא יכול לעסוק ברפואה, במחקר, בדת ובמיסטיקה. הוא גם יכול לעבוד במוסד כשבקני בשל יכולתו לשמור סודות וכקצין בצבא בדרג עליון חשוב ומוערך. יכול להיות מחנך, סופר, או פילוסוף. הוא התברך בכישרון יצירתי ויכול לעסוק גם בציור ובכתיבה. הוא מתמסר מאוד לעבודתו, לכן יעדיף לעבוד בסביבה מבודדת, שקטה ובאווירה נינוחה. הזדהותו עם סבל הזולת מכשירה אותו למקצועות הסיעוד או הרפואה תוך התמחות בהרדמה, באורתופדיה ובכירורגיה. הוא יכול לעסוק במקצועות הנפש - בפסיכולוגיה, בפסיכיאטריה, בייעוץ ובאבחון. כמו כן לעבוד כבלש, כמהנדס, כממציא, כמדען וכאיש היי-טק. לעתים יעדיף מקצועות ימיים. \n משמעות מספר 7 במצבים של חולשה, רגישות ומחלה \n כשהאדם הזה חולה יוכל לטפל בעצמו ובאחרים, בהבנה, ברגישות ובסבלנות. הוא ישמור על בריאותו ויטפל לבד בעצמו. מחלות מפחידות אותו ומשום כך ישתמש בתרגילי גוף ובשחייה שישפרו את הרגשתו. ״תכן שיעשה יוגה ומדיטציה כדי להרפות את המתחים שהצטברו בו. \n מוקדי התורפה בגוף, הנפש ומערכת העצבים,כפות הרגליים והקרסוליים.</string>
    <string name="m_hands_num8">מספר 8 במוקד הידיים - מיוחס למזל גדי, לכוכב שבתאי וליסוד האדמה \n באופן פוטנציאלי מספר 8 במוקד הידיים והמזל המיוחס לו, מתאר אדם שיבחר את הקריירה שלו בשיקול דעת ואחרי בדיקה מקיפה ומדוקדקת. משבחר את דרכו, איש לא יוכל להזיזו ממנה כיוון שהוא שמרן ואינו אוהב שינויים. הוא יגיע לפסגה בצעדים מדודים ומתונים ללא קפיצות ודילוגים. הוא מצטיין ביכולת ארגונית, בכוח פנימי רב, הוא נמרץ, בעל יכולת הישרדות, יכולת שליטה וניהול, יעילות ומעשיות. הוא אינו חושש מכישלונות ותמיד ממוקד במטרה, אותה ישיג ויהי מה! מסוגל להשקיע בדברים מועילים שיש מאחוריהם כסף, הצלחה ועניין. \n מבחינה מקצועית \n מספר 8 במוקד הידיים מייצג אדם שלא יסכים להתקבל למקום עבודה שאין בו קידום. הוא יסכים להתחיל כזוטר בתנאי שמובטח לו קידום עד לדרגת ניהול. הוא תחרותי מאוד ובהתאם צפויה לו הצלחה רבה. הוא מוכשר מאוד, אומן ביכולותיו ובעל ידי זהב! הוא חד עין ובעל יכולת אבחון גבוהה, הוא יכול להוציא דברים מהכוח לפועל בשיא היעילות והארגון. מצטיין במדעים מדויקים, בתפקידים ציבוריים ובמשרות בשירות המדינה. יוכל לעבוד כיועץ השקעות, ככלכלן, כבנקאי, כרואה חשבון, כמהנדס, כמנהל בכיר, כאיש כספים ומכירות. כמו כן יש העוסקים ברפואה קונבנציונלית והוליסטי , בעיסוי, ברפלקסולוגיה, בפיזיותרפיה, פסיכיאטריה וישנם כאלה שיגלו משיכה עזה למיסטיקה ולרוחניות. \n משמעות מספר 8 במצבים של חולשה, רגישות ומחלה \n כשהאדם הזה יהיה חולה יוכל לטפל במעשיות רבה בעצמו ובאחרים. בדרך כלל הוא שונא להיות חולה או מרותק למיטה, לכן הוא ישמור היטב על בריאותו בחיי היום-יום. מוקדי התורפה בגוף, ברכיים, עצמות, כיס מרה, טחול, שיניים, המעי הגס, ייתכן גם שיסבול מטחורים.</string>
</resources>